migrate to jboss-sunxacml dependency - migrate to jboss managed clone of sunxacml - migrate to localized EvaluationContexts to fix resourceId bug and reduce overhead